# galaga-marimo-demos

./: .gitignore  AUTHORING_NOTEBOOKS.md  LICENSE  NOTEBOOK_IDEAS.md  README.md  dirac_antiparticles_sta.py  lorentz_boost.py  main.py  notebook.py  null_vectors_sta.py  one_g_travel.py  pyproject.toml  rotor_space.py  rotors_from_reflections.py  test.py  test_sta.py  test_vect_render.py
notebooks/cga/: cga_2d_apollonius_circles.py  cga_2d_circle_intersections_upstairs.py  cga_2d_circles_as_plane_slices.py  cga_2d_circumcircle_and_delaunay.py  cga_2d_coaxal_circle_families.py  cga_2d_distance_on_paraboloid.py  cga_2d_inversion_in_circle.py  cga_2d_inversion_maps_lines_and_circles.py  cga_2d_inversion_on_circle_family.py  cga_2d_lifted_points_paraboloid.py  cga_2d_lines_and_circles.py  cga_2d_lines_as_circles_through_infinity.py  cga_2d_null_basis.py  cga_2d_orthogonal_circles.py  cga_2d_point_pair_splitting.py  cga_2d_point_pairs_and_intersections.py  cga_2d_points_and_distance.py  cga_2d_pole_polar_circle.py  cga_2d_power_of_point.py  cga_2d_radical_axis_of_two_circles.py  cga_2d_rigid_motions.py  cga_2d_tangency_in_cga.py  cga_2d_tangent_circles_shared_lifted_point.py  cga_2d_translations.py  cga_2d_translations_on_paraboloid.py  cga_2d_up_and_down.py  cga_2d_voronoi_delaunay_flip.py  cga_2d_voronoi_from_radical_axes.py  cga_3d_spheres_and_planes.py
notebooks/grade/: bivector_commutators.py  bivectors_are_planes.py  commutator_lie_jordan.py  grade_and_dimension.py  grade_routing_products.py  grade_structure.py  hodge_star_vs_ga_duality.py  inner_product_family.py  (+7 more)
(+68 files in other folders)
