[project]
name = "galaga-marimo-demos"
version = "0.1.0"
description = "Concept-first marimo notebooks for geometric algebra with galaga"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "galaga>=0.2.0",
    "galaga-marimo>=0.2.0",
    "marimo>=0.21.1",
    "matplotlib>=3.10.8",
    "sankeyflow>=0.4.1",
]
