[project]
name = "galaga-marimo-demos"
version = "0.1.0"
description = "Concept-first marimo notebooks for geometric algebra with galaga"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "galaga>=1.0.0",
    "galaga-marimo>=1.0.0",
    "marimo>=0.21.1",
    "matplotlib>=3.10.8",
    "pydantic-ai>=1.76.0",
    "sankeyflow>=0.4.1",
]

[dependency-groups]
dev = [
    "openai>=2.30.0",
]
